<resources>
    <string name="app_name">Bmob</string>

    <string name="common_button_cancel">取消</string>
    <string name="common_button_confirm">确定</string>
    <string name="common_loading_failed">网络异常, 点击重试</string>
    <string name="common_empty_data">数据是空的~</string>
    <string name="toast_network_success">网络请求成功</string>
    <string name="toast_network_failure">网络请求失败</string>
    <string name="toast_network_failure_reason">网络请求失败: %s</string>
    <string name="msg_network_error_time_out">连接超时</string>
    <string name="msg_network_error_server">服务器异常</string>
    <string name="msg_network_error_unknown">"未知错误: "</string>
    <string name="header_pull_to_refresh">下拉刷新</string>
    <string name="header_release_to_refresh">松开刷新</string>
    <string name="header_refreshing">正在刷新...</string>


    <string name="hint_login_account">用户名</string>
    <string name="hint_login_password">密码</string>
    <string name="button_login">登录</string>
    <string name="button_login_forget">忘记密码?</string>
    <string name="button_login_fingerprint">指纹登录</string>
    <string name="button_login_register">新用户注册</string>
    <string name="toast_login_empty_account">用户名为空</string>
    <string name="toast_login_empty_password">密码为空</string>
    <string name="toast_login_success">登录成功</string>

    <string name="tab_home_mood">Moods</string>
    <string name="tab_home_apps">应用</string>
    <string name="tab_home_users">用户</string>
    <string name="tab_home_plan">计划</string>
    <string name="button_plan_sensor">距离传感器</string>
    <string name="button_plan_sdcard">屏幕和储存</string>

    <string name="text_time">计时</string>
    <string name="text_count">计数</string>
    <string name="text_start_time">00:00:00.00</string>
    <string name="text_start_count">0</string>
    <string name="title_sensor">距离传感器</string>

    <string name="title_sdcard">屏幕和储存</string>
    <string name="text_screen">屏幕</string>
    <string name="text_storage">储存</string>
    <string name="button_color_filter">ColorFilter</string>
    <string name="title_color_filter">ColorFilter</string>
    <string name="button_camera">Camera</string>
    <string name="button_codec">MediaCodec</string>
    <string name="title_codec">MediaCodec</string>
    <string name="button_kotlin">Kotlin</string>


    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="title_publish">发布</string>
    <string name="hint_publish_et">此时此刻，心情如何?</string>
    <string name="button_publish">发布</string>
    <string name="toast_empty_mood">说点什么吧~</string>
    <string name="text_admin">管理员</string>
    <string name="toast_one_more_press">再按一次退出程序</string>
</resources>
