<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RadioGroup
        android:id="@+id/home_tab_rg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y140"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_tab_moods_rb"
            style="@style/HomeTabRb"
            android:checked="true"
            android:text="@string/tab_home_mood"/>

        <RadioButton
            android:id="@+id/home_tab_apps_rb"
            style="@style/HomeTabRb"
            android:text="@string/tab_home_apps"/>

        <ImageView
            android:id="@+id/home_tab_publish_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:rotation="45"
            android:src="@drawable/icon_50_tab_camera_close_gold"
            android:transitionName="publish"/>

        <RadioButton
            android:id="@+id/home_tab_users_rb"
            style="@style/HomeTabRb"
            android:text="@string/tab_home_users"/>

        <RadioButton
            android:id="@+id/home_tab_plan_rb"
            style="@style/HomeTabRb"
            android:text="@string/tab_home_plan"/>
    </RadioGroup>

    <include layout="@layout/layout_common_line_bottom"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/home_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/home_tab_rg"
        android:layout_below="@+id/home_title_tv"/>

    <TextView
        android:id="@+id/home_title_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:background="@color/colorThemeRed"
        android:gravity="center"
        android:text="@string/tab_home_apps"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeMedium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
